--- a/default.htm
+++ b/default.htm
@@ -34,7 +34,7 @@
 
   <body>
     <header>
-      <div id="account-top" class="container">
+      <div id="account-top" class="container" style="background: white">
         <button type="button" id="acc-logout-btn" class="btn btn-primary"> <a href="default.htm">Log-out</a> </button>
       </div>
     </header>
@@ -43,12 +43,12 @@
       <div id="login-box">
         <div id="login-top">
           <img src="" alt="">
-          <h4 style="text-align: left;">Welcome to NatWest Online Banking</h4>
+          <h4 style="text-align: center;">NatWest Online Banking</h4>
         </div>
           <div id="login-inputs">
             <label for="user-id">User ID</label> <br>
             <input type="text" name="user-id" id="username"> <br>
-
+            <br>
             <label for="password">Password</label> <br>
             <input type="password" name="password" id="userpassword">
 
