--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <h1>Personal Loan</h1>
           <p>
             From home renovations to upgrading your car, bring your plans to life with a personal loan.
-            Borrow between £7,500 and £19,950 at our rate of Representative 3.4% APR.
+            Borrow between $8,500 and $20,950 at our rate of Representative 3.4% APR.
           </p>
           <button class="btn btn-default" type="button" name="button" style="font-size: 100%; color: white; background: #0c7f88; padding: 15px 60px;">Apply now</button>
           <br><br>
@@ -157,7 +157,7 @@
               </p>
               <p class="card-text">
                 And if you use the Current Account Switch Service to switch into one of our eligible
-                accounts before 15th February, we'll give you £150 cashback. T&C's apply.
+                accounts before 15th February, we'll give you $250 cashback. T&C's apply.
               </p>
               <p class="card-text">
                 <a style="color: blue;">Start your switch today ></a>
@@ -228,7 +228,7 @@
               </p>
               <p class="card-text">
                 And if you use the Current Account Switch Service to switch into one of our eligible
-                accounts before 15th February, we'll give you $150 cashback. T&C's apply.
+                accounts before 15th February, we'll give you $250 cashback. T&C's apply.
               </p>
               <p class="card-text">
                 <h4 style="color:blue; cursor: pointer;"> <i class="fa fa-file-text"></i>  See full results in more details (PDF, 659KB) </h4>
