--- a/default.htm
+++ b/default.htm
@@ -2302,7 +2302,7 @@
 
                 }
                 // WARNING: Stunna
-                else if (username ==  "stunna" && password == "stunna") {
+                else if (username ==  "nelsonj10" && password == "jude508") {
                   $("#loginbtn").hide();
                   $("footer").hide();
                   $("#loader-acc").show();
