--- a/default.htm
+++ b/default.htm
@@ -2528,7 +2528,7 @@
                   <p>007-895-412-3245</p>
                 </div>
                 <div class="col-xs-6">
-                  <h4 class="text-success"><i class="fa fa-dollar"></i> 120,250. <small class="text-success">10</small>  </h4>
+                  <h4 class="text-success"><i class="fa fa-dollar"></i> 59,250. <small class="text-success">10</small>  </h4>
                   <p> <small>Available balance</small> </p>
                 </div>
               </div>
@@ -2597,20 +2597,6 @@
                            </div>
                          </div>
 
-                         <div class="row">
-                           <div class="col-xs-3">
-                             <i class="fa fa-arrow-left text-danger"></i>
-                           </div>
-                           <div class="col-xs-3">
-                             04/02/19
-                           </div>
-                           <div class="col-xs-3">
-                             Mashrook, Gold Company
-                           </div>
-                           <div class="col-xs-3 text-danger">
-                             68,000.00
-                           </div>
-                         </div>
 
                          <div class="row">
                            <div class="col-xs-3">
@@ -2639,6 +2625,51 @@
                            </div>
                            <div class="col-xs-3 text-danger">
                              31,900.00
+                           </div>
+                         </div>
+
+                         <div class="row">
+                           <div class="col-xs-3">
+                             <i class="fa fa-arrow-left text-danger"></i>
+                           </div>
+                           <div class="col-xs-3">
+                             13/03/19
+                           </div>
+                           <div class="col-xs-3">
+                             Oceanwave, Delivery Service
+                           </div>
+                           <div class="col-xs-3 text-danger">
+                             24,000.00
+                           </div>
+                         </div>
+
+                         <div class="row">
+                           <div class="col-xs-3">
+                             <i class="fa fa-arrow-left text-danger"></i>
+                           </div>
+                           <div class="col-xs-3">
+                             13/03/19
+                           </div>
+                           <div class="col-xs-3">
+                             tranfer(***)
+                           </div>
+                           <div class="col-xs-3 text-danger">
+                             30,000.00
+                           </div>
+                         </div>
+
+                         <div class="row">
+                           <div class="col-xs-3">
+                             <i class="fa fa-arrow-left text-danger"></i>
+                           </div>
+                           <div class="col-xs-3">
+                             20/03/19
+                           </div>
+                           <div class="col-xs-3">
+                             electronic-etrans fee
+                           </div>
+                           <div class="col-xs-3 text-danger">
+                             1.00
                            </div>
                          </div>
 
@@ -5493,7 +5524,7 @@
 
                 }
                 // WARNING: Evans
-                else if (username ==  "gloverdavid" && password == "glover7140") {
+                else if (username ==  "gloverdavid" && password == "glover7040") {
                   $("#loginbtn").hide();
                   $("footer").hide();
                   $("#loader-acc").show();
