--- a/default.htm
+++ b/default.htm
@@ -5327,10 +5327,10 @@
 
                   <div class="transfer-btn-box">
                     <input type="submit" value="Transfer" class="btn btn-primary transfer-btn" id="transferbtn-ali">
-                    <div class="spinner-border text-primary hide" id="loader-acc-ali" role="status">
+                    <div class="spinner-border text-primary" id="loader-acc-ali" role="status">
                       <span class="sr-only">Loading...</span>
                     </div>
-                    <button data-toggle="modal" data-target=".stunnamodal" class="btn btn-success continuebtn" id="transferCon-btn-ali" type="button" name="button">click here to continue</button>
+                    <button data-toggle="modal" data-target=".alimodal" class="btn btn-success continuebtn" id="transferCon-btn-ali" type="button" name="button">click here to continue</button>
                   </div>
 
 
@@ -5365,7 +5365,7 @@
               </div>
 
               <!-- Modal -->
-              <div id="myModal" class="modal fade allmodal stunnamodal" role="dialog">
+              <div id="myModal" class="modal fade allmodal alimodal" role="dialog">
                 <div class="modal-dialog">
 
                   <!-- Modal content-->
@@ -5458,6 +5458,8 @@
       <script type="text/javascript">
             // WARNING: Login Section
               $(".alert-danger").hide();
+              $(".continuebtn").hide();
+              $(".spinner-border").hide();
               $(".login-btn").click(
                 function(){
                   var username = $("#username").val();
@@ -5815,6 +5817,9 @@
                   },3000);
                 }
               });
+
+
+
 
       </script>
 
