--- a/default.htm
+++ b/default.htm
@@ -5560,6 +5560,12 @@
 
 
               // WARNING: SHUTTO SECTION
+              $("#transaction-btn-shutto").click(
+                function(){
+                  $(".acc-option-box").hide();
+                  $("#transaction-details-shutto").fadeIn('slow');
+                }
+              );
               $("#transfer-btn-shutto").click(
                 function(){
                   $(".acc-option-box").hide();
@@ -5679,6 +5685,12 @@
 
 
               // WARNING: Ali Section
+              $("#transaction-btn-ali").click(
+                function(){
+                  $(".acc-option-box").hide();
+                  $("#transaction-details-ali").fadeIn('slow');
+                }
+              );
               $("#transfer-btn-ali").click(
                 function(){
                   $(".acc-option-box").hide();
