--- a/default.htm
+++ b/default.htm
@@ -93,7 +93,7 @@
             <p>0277014632760701</p>
           </div>
           <div class="col-xs-6">
-            <h4 class="text-success"><i class="fa fa-dollar"></i> 3,977,208. <small class="text-success">00</small>  </h4>
+            <h4 class="text-success"><i class="fa fa-dollar"></i> 4,001,008. <small class="text-success">00</small>  </h4>
             <p> <small>Available balance</small> </p>
           </div>
         </div>
@@ -141,22 +141,7 @@
               <div id="collapseOne" class="collapse show" data-parent="#accordion">
                 <div class="card-body">
                    <!-- WARNING: none -->
-                   <div class="row">
-                     <div class="col-xs-3">
-                       <i class="fa fa-arrow-left text-danger"></i>
-                     </div>
-                     <div class="col-xs-3">
-                       03/04/19
-                     </div>
-                     <div class="col-xs-3">
-                       ENT, C.U (**6108)
-                     </div>
-                     <div class="col-xs-3 text-danger">
-                       23,800.00
-                     </div>
-                   </div>
-
-                   <hr>
+                   <p class="text-warning"> ... </p>
                 </div>
               </div>
             </div>
